# KeySwitch

./: BUILD_INSTALLERS.md  CODE_SIGNING.md  Cargo.toml  DISTRIBUTION.md  INSTALLATION_GUIDE.md  INSTALLER_README.md  LICENSE  QUICK_START.md  README.md  com.keyswitch.daemon.plist  entitlements.plist
.claude/: settings.local.json
docs/: README.md
scripts/: build-mac-installer-simple.sh  build-mac-installer.sh  build-windows-installer.ps1  build-windows-simple.ps1  conclusion.html  create-release.sh  distribution.xml  welcome.html
src/: detect_macos.rs  detect_windows.rs  keychron.rs  main.rs  via.rs
