[package]
name = "keyswitch"
version = "0.1.0"
edition = "2021"
description = "Background daemon that sets Keychron keyboard layout (Mac/Windows) on connect, e.g. after KVM switch"

[dependencies]
hidapi = "2.6"
log = "0.4"
env_logger = { version = "0.11", default-features = false }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", default-features = false, features = ["process", "fs"] }

[[bin]]
name = "keyswitch"
path = "src/main.rs"
